[package]
name = "rust-evm"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/anddddrew/rust-ethereum"
target = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
primitive-types = { version = "0.10.1",  default-features = false }
